<resources>
    <string name="app_name">MyPlans</string>
    <string name="title">Title</string>
    <string name="desc">Note</string>
    <string name="goal_score">Goal Score</string>
    <string name="hint_title">Enter title</string>
    <string name="hint_note">Add notes about the task</string>
    <string name="hint_goal_score">Enter value of goal</string>
    <string name="button_save">Save</string>
    <string name="stats">Stats:</string>
    <string name="clock">Reminder:</string>
    <string name="add_first">Keep quantitative measurements of your goals. Create a task for that goal
        here and keep track of the achieved scores daily.
        A consolidated place to track your goals.

        <b>Create your first goal to start.</b> </string>



</resources>